--- a/style.css
+++ b/style.css
@@ -46,3 +46,55 @@
     color: var(--white-color);
     cursor: pointer;
 }
+
+main{
+    margin-top: 70px;
+}
+.main__cards{
+    display: flex;
+    overflow-x: scroll;
+    align-items: center;
+}
+.title{
+    font-family: Manrope;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 48px;
+}
+.main__card{
+    min-width: 406px;
+    height: 450px;
+    border: solid 1px var(--white-color);
+    padding: 40px 60px 10px 40px;
+}
+.card__title{
+    font-family: Manrope;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 40px;
+    margin-bottom: 132px;
+}
+.card__desc{
+    font-family: Manrope;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 28px;
+    margin-bottom: 131px;
+}
+.btn{
+    display: flex;
+    align-items:center;
+    gap: 5px;
+    border-radius: 50px;
+    padding: 10px 20px;
+    border:none;
+    cursor: pointer;
+    border: solid transparent 3px;
+}
+.blue-btn{
+    background-color:var(--blue-color);
+    color:var(--white-color)
+}
+.main__card{
+    margin-top: 70px;
+}
