--- a/styles/global.css
+++ b/styles/global.css
@@ -11,3 +11,19 @@ a{
     text-decoration: none;
     color:var(--white-color);
 }
+ main ::-webkit-scrollbar {
+    /* width: 5px: */
+    height: 2px;
+  }
+  main ::-webkit-scrollbar-track {
+    /* box-shadow: inset 0 0 5px grey; */
+    background-color: var(--gray-color); 
+    border-radius: 10px;
+  }
+  main ::-webkit-scrollbar-thumb {
+    background: var(--white-color); 
+    border-radius: 10px;
+  }
+  main ::-webkit-scrollbar-thumb:hover {
+    background: var(--gray-color); 
+  }
