--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ main{
     display: flex;
     overflow-x: scroll;
     align-items: center;
+    margin-top: 30px;
 }
 .title{
-    font-family: Manrope;
     font-size: 35px;
     font-weight: 700;
     line-height: 48px;
@@ -68,14 +68,12 @@ main{
     padding: 40px 60px 10px 40px;
 }
 .card__title{
-    font-family: Manrope;
     font-size: 32px;
     font-weight: 700;
     line-height: 40px;
     margin-bottom: 132px;
 }
 .card__desc{
-    font-family: Manrope;
     font-weight: 500;
     font-size: 16px;
     line-height: 28px;
@@ -95,6 +93,22 @@ main{
     background-color:var(--blue-color);
     color:var(--white-color)
 }
+footer{
+    margin-top: 200px;
+}
 .main__card{
-    margin-top: 70px;
+    margin-top: 1px;
+}
+
+.footer__cards{
+    display: flex;
+    overflow-x: scroll;
+    align-items: center;
+    margin-top: 30px;
+}
+.footer__card{
+    min-width: 406px;
+    height: 450px;
+    border: solid 1px var(--white-color);
+    padding: 40px 60px 10px 40px; 
 }
