--- a/styles/global.css
+++ b/styles/global.css
@@ -27,3 +27,24 @@ a{
   main ::-webkit-scrollbar-thumb:hover {
     background: var(--gray-color); 
   }
+  ::-webkit-scrollbar {
+    /* width: 5px; */
+    height: 2px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px black; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--white-color); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--gray-color); 
+  }
